# oli-devops

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: security.yml  self-test.yml
docs/: ADOPTION-STATUS.md  ONBOARDING.md  RELEASE.md  TROUBLESHOOTING.md
policies/: ENFORCEMENT.md  EXCEPTIONS.md  SEMVER.md
scripts/: common.sh  gitleaks-protect.sh  trivy-fs.sh
templates/js-docker/: ci-security-job.yml  claude-md-section.md  pre-commit-config.yaml  renovate.json
templates/python-docker/: ci-security-job.yml  claude-md-section.md  pre-commit-config.yaml
tests/fixtures/clean/: Dockerfile  pyproject.toml
tests/fixtures/with-critical-cve/: pyproject.toml  requirements.txt
tests/fixtures/with-secret/: Dockerfile  config.py
